# kissunits

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  notes.md
.github/workflows/: rust.yml
benches/: my_bench.rs
examples/: basic.rs  my_example.rs
examples/playground/: my_playground.rs
scripts/: benches.sh  build.sh  echo_gitignore.sh  flamegraph.bash  test.bash
src/: defaults.rs  geo.rs  helpers.rs  lib.rs
src/distance/: kilometers.rs  meters.rs
src/quantity/: mod.rs  promille.rs
src/speed/: kilometers_per_hour.rs  meters_per_second.rs  mod.rs
src/time/: hours.rs  minutes.rs  seconds.rs
tests/: asdf.rs  distance.rs  examples.rs  quantity.rs  speed.rs  time.rs
tests/helpers/: mod.rs
tests/some_module/: asdf.rs
