# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "template-rust" # lib.rs
default-run = "my_binary" # bin/my_binary.rs
# Changing this version in a branch 'release' and pushing it to
# GitHub will lead to publishing it automatically to crates.io.
# Hence do not forget updating Unreleased in CHANGELOG.md.
version = "0.0.0" # !!!
description = "Description"
edition = "2018"

authors = [
    "Parga Cacheiro, Dominic (dominic.parga@gmail.com)",
]
repository = "https://github.com/dominicparga/template-rust"
readme = "README.md"
keywords = ["", "", "", "", ""]
categories = ["", "", "", ""]
license = "Apache-2.0"


[features]


[[bin]]
name = 'my_binary' # bin/my_binary.rs


[[example]]
name = "my_example"
path = "examples/my_example.rs"

[[example]]
name = "my_playground"
path = "examples/playground/my_playground.rs"


[[bench]]
name = "my_bench"
harness = false


[dependencies]
clap = "2.33" # cmdline-parsing
env_logger = "0.6" # logging for external use, e.g. main.rs and examples
log = "0.4"        # logging for internal use, e.g. lib.rs


[dev-dependencies]
criterion = "0.3" # benchmarking
