# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "kissunits" # lib.rs
# Changing this version in a branch 'release' and pushing it to
# GitHub will lead to publishing it automatically to crates.io.
# Hence do not forget updating Unreleased in CHANGELOG.md.
version = "0.0.0" # !!!
description = "Different units (like distances or durations), keeping it small and simple"
edition = "2018"

authors = [
    "Parga Cacheiro, Dominic (dominic.parga@gmail.com)",
]
repository = "https://github.com/dominicparga/kissunits"
readme = "README.md"
keywords = ["units", "meters", "seconds", "kiss", "si-units"]
categories = ["data-structures", "date-and-time", "mathematics", "science"]
license = "Apache-2.0"


[[example]]
name = "basic"
path = "examples/basic.rs"


[dependencies]
smallvec = "1" # inlining small vecs
